Bug 403574 - ""ASSERTION: Infinite loop! Calling EnsureScriptEnvironment() from within EnsureScriptEnvironment()!" with XBL, <frame>" [p=jst@mozilla.org (Johnny Stenback [jst]) r+sr=bzbarsky (DEBUG builds only)]